New wallet view created

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,6 +10,10 @@ card.label.delete = Delete card
 card.label.get = View cards
 card.label.use = Use card
 
+wallet.label.create=Create Wallet
+wallet.label.currency=Currency
+
 navigation.cancel=Cancel
+navigation.add-wallet=Add Wallet
 
 
