--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -17,6 +17,8 @@ wallet.label.currency=Currency
 
 category.title.empty=You still have no categories!
 
+deposit.label=Deposit
+
 navigation.cancel=Cancel
 navigation.add-wallet=Add Wallet
 
