Withdraw view + Large Transaction Verify

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,10 +14,12 @@ cards.title.empty=You still have no cards!
 
 wallet.label.create=Create Wallet
 wallet.label.currency=Currency
+wallet.label.balance=Your wallet balance is 0! 
 
 category.title.empty=You still have no categories!
 
 deposit.label=Deposit
+withdraw.label=Withdraw
 
 navigation.cancel=Cancel
 navigation.add-wallet=Add Wallet
