Home Page set up logged In

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,15 +11,18 @@ card.label.get = View cards
 card.label.use = Use card
 cards.title.empty=You still have no cards!
 
-
 wallet.label.create=Create Wallet
 wallet.label.currency=Currency
 wallet.label.balance=Your wallet balance is 0! 
 
 category.title.empty=You still have no categories!
+wallet.title.empty=You still have no added wallet!
 
 deposit.label=Deposit
 withdraw.label=Withdraw
+transfer.label=Transfer
+
+contact.title.empty=You still have no added contacts!
 
 navigation.cancel=Cancel
 navigation.add-wallet=Add Wallet
