--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,9 +14,10 @@ cards.title.empty=You still have no cards!
 
 wallet.label.create=Create Wallet
 wallet.label.currency=Currency
-wallet.label.balance=Your wallet balance is 0! 
+wallet.label.balance=Your wallet balance is 0!
 
 category.title.empty=You still have no categories!
+transactions.title.empty=You still have no transactions!
 
 deposit.label=Deposit
 withdraw.label=Withdraw
@@ -24,4 +25,6 @@ withdraw.label=Withdraw
 navigation.cancel=Cancel
 navigation.add-wallet=Add Wallet
 
+transaction.cancel=Cancel
+transaction.send-money=Send
 
