created Transfer Internal view

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -27,4 +27,8 @@ contact.title.empty=You still have no added contacts!
 navigation.cancel=Cancel
 navigation.add-wallet=Add Wallet
 
+transaction.label.form.identity=Username / Email / PhoneNumber
+transaction.label.form.amount = Amount
+transaction.label.form.category=Category
+
 
